# ruflo

./: package-lock.json  package.json
.github/workflows/: oia-audit-weekly.yml  v3-ci.yml
aperture/: Cargo.toml
aperture-ui/src/pages/: Aperture.tsx
aperture/crates/aperture-core/src/: grammar.rs
aperture/crates/aperture-swarm/src/: native_stdio.rs  runtime.rs
aperture/crates/aperture-tui/src/agent_runner/panes/: chart.rs  corpact.rs  corr.rs  crypto.rs  earnings.rs  export.rs  filings.rs  financials.rs  fx.rs  inbox.rs  insider.rs  ivol.rs  macro_pane.rs  members.rs  movers.rs  news.rs  options.rs  oracle.rs  order.rs  quote.rs  risk.rs  screen.rs  sentiment.rs  tech.rs  watchlist.rs  yields.rs
aperture/crates/aperture-wasm/: Cargo.toml
aperture/crates/aperture-wasm/src/: shell.rs  shell_routing.rs
aperture/crates/aperture-wasm/src/shell_renderers/: wave1.rs
aperture/crates/aperture-wasm/tests/: inbound_rendering.rs
bench-witness/: rag-adaptive-router-2026-05-18T00-36-12-259Z.json  rag-hybrid-2026-05-18T00-51-54-255Z.json
data/: clone-data.ledger.json  clone-data.proof.json  clone-data.rvf
plugins/ruflo-graph-intelligence/: package.json
plugins/ruflo-metaharness/scripts/: smoke.sh
ruflo/: package.json
ruflo/src/ruvocal/: .dockerignore
scripts/: benchmark-rag-adaptive.mjs  benchmark-rag-hybrid.mjs
v3/@claude-flow/cli/: package.json
v3/goal_ui/: .optimization-plan.md  .ruflo-integration-plan.md  package-lock.json  package.json
verification/: witness-fixes.json
verification/macos/: history.jsonl  manifest.md.json
(+34 files in other folders)
